2006-01-23	Benedikt Meurer <benny@xfce.org>

	* exo/exo-gtk-extensions.c(exo_gtk_radio_action_set_current_value):
	  If no action matches the new value, the radio group will have no
	  active action afterwards.

2006-01-23	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Bump version to 0.3.1.3svn.

2006-01-22	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Bump version to 0.3.1.2alpha.
	* configure.in.in: Bump current library interface version to 1, to make
	  sure certain Linux distributions don't run into trouble when including
	  exo pre-releases.
	* NEWS: Update some news items for the alpha release.
	* THANKS: Update translator credits.
	* po/*.po, po/libexo-0.3.pot: Update translations.

2006-01-14	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c: Draw keyfocus using the same semantics as
	  GtkTreeView. This finally fixes bug #1321.

2006-01-11	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_paint_item): Let the cell renderer
	  know whether the current item has the keyboard focus. Part one of fix
	  for bug #1321.

2005-12-30	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_start_rubberbanding): Be sure to
	  disable a previous rubberband selection when starting a new rubberband
	  selection.

2005-12-17	Benedikt Meurer <benny@xfce.org>

	* NEWS, README, configure.in.in: Add support for three different levels
	  of debugging support.

2005-12-15	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_expose_event): Don't handle expose
	  events until the layout has been calculated.
	* exo/exo-icon-view.c(exo_icon_view_expose_event): Simplify the rubber-
	  band painting by taking advantage of double-buffering.

2005-12-13	Benedikt Meurer <benny@xfce.org>

	* exo/exo-gdk-pixbuf-extensions.{c,h}, exo/exo.symbols: Add new function
	  exo_gdk_pixbuf_scale_down(), which scales down an icon to fit into
	  given dest_width/dest_height, optionally preserving the aspect ratio